--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>Я окончил колледж по специальности "Информационная безопасность".
       А сейчас учусть в институте на специльность "Компьютерная и информационная безопасность"</p>
       <h3>В данный момент мои навыки скудны, и все что я могу сделать это вкусно сварить пельмени</h3>
-      <p>На самом деле у меня неплохо получается не только варить, но и жарить ТИГРАНА.</p>
+      <p>На самом деле у меня неплохо получается не только варить, но и жарить пельмени.</p>
     </div>
     </section>
 
